--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Доска объявлений</title>
 <body>
     <h1>Заголовок 1 уровня</h1>
@@ -12,5 +13,55 @@
     <h4>Заголовок 4 уровня</h4>
     <h5>Заголовок 5 уровня</h5>
     <h6>Заголовок 6 уровня</h6>
+    <p class="paragraph-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <div>
+    <span>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Aliquam aliquid commodi cupiditate eius eveniet incidunt,
+        ipsa laboriosam laudantium perferendis quo? Ducimus hic
+        inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
+      </span>
+    <br>
+    <span>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Aliquam aliquid commodi cupiditate eius eveniet incidunt,
+        ipsa laboriosam laudantium perferendis quo? Ducimus hic
+        inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
+      </span>
+    </div>
+    <span>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Aliquam aliquid commodi cupiditate eius eveniet incidunt,
+        ipsa laboriosam laudantium perferendis quo? Ducimus hic
+        inventore iste mollitia omnis perspiciatis saepe voluptate voluptatum?
+    </span> 
+    <ul>
+        <li>
+          Первый элемент
+        </li>
+        <li>
+          Второй элемент
+        </li>
+        <li>
+          Третий элемент
+        </li>
+      </ul>
+      <ol>
+        <li>
+          Первый элемент
+        </li>
+        <li>
+          Второй элемент
+        </li>
+        <li>
+          Третий элемент
+        </li>
+      </ol>
+</body>
+</body>
+</body>
 </body>
 </html>
