--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h6>Заголовок 6 уровня</h6>
     <p class="paragraph-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <p class="paragraph-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
+    <p class="paragraph-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
     <div>
     <span>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
