--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="paragraph-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
     <p class="paragraph-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur atque sapiente eaque error sunt nemo iure consequatur in aspernatur totam nostrum, cumque possimus consectetur magni laborum quo facere. Ipsam!</p>
     <div>
-    <span>
+    <span class="paragraph-4">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
         Aliquam aliquid commodi cupiditate eius eveniet incidunt,
         ipsa laboriosam laudantium perferendis quo? Ducimus hic
@@ -61,7 +61,5 @@
         </li>
       </ol>
 </body>
-</body>
-</body>
-</body>
+<img src="cup.jpg">
 </html>
